<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/classroom"
        android:enabled="true"
        android:title="@string/classrooms"
        android:icon="@drawable/ic_calendar_foreground" />
    <item
        android:id="@+id/request"
        android:enabled="true"
        android:title="@string/requests"
        android:icon="@drawable/ic_request_foreground" />
    <item
        android:id="@+id/add"
        android:enabled="true"
        android:title="@string/add"
        android:icon="@drawable/ic_add_foreground" />
    <item
        android:id="@+id/chat"
        android:enabled="true"
        android:title="@string/chat"
        android:icon="@drawable/ic_chat_foreground" />
    <item
        android:id="@+id/more"
        android:enabled="true"
        android:title="@string/more"
        android:icon="@drawable/ic_more_foreground" />

</menu>