<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/tv_start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_time"
                android:layout_marginEnd="20dp" />

            <TextView
                android:id="@+id/tv_lesson_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/lesson_name"
                android:textStyle="bold"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tv_duration_lesson"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/duration_lesson" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_end_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_time"
                android:layout_marginEnd="20dp" />

            <ImageView
                android:id="@+id/iv_icon_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_person_foreground"
                android:adjustViewBounds="true"
                android:maxWidth="14dp"
                android:maxHeight="14dp"
                android:layout_gravity="bottom"
                android:contentDescription="@string/icon_group" />

            <TextView
                android:id="@+id/tv_coach_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coach_name"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/iv_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_location_foreground"
                android:adjustViewBounds="true"
                android:maxWidth="14dp"
                android:maxHeight="14dp"
                android:layout_gravity="bottom"
                android:contentDescription="@string/ic_location_foreground" />

            <TextView
                android:id="@+id/tv_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:layout_weight="1" />

        </LinearLayout>


    </LinearLayout>


</androidx.cardview.widget.CardView>